# qml-plugins

./: CMakeLists.txt
apps/demo/: CMakeLists.txt
apps/demo/qml/: CMakeLists.txt  main.qml
apps/demo/qml/demo/App/: AppWindow.qml
apps/demo/qml/subdir/: InAppQmlComponent.qml
apps/demo/src/: CMakeLists.txt  InAppQmlObject.cpp  InAppQmlObject.h  main.cpp  main.qml
libs/: CMakeLists.txt
libs/Chat/: CMakeLists.txt
libs/Chat/qml/: CMakeLists.txt
libs/Chat/qml/demo/Chat/: ChatView.qml  qmldir
libs/Chat/src/Chat/: CMakeLists.txt  ChatPlugin.cpp
libs/Communities/: CMakeLists.txt
libs/Communities/qml/: CMakeLists.txt  Communities-qml.qrc
libs/Communities/qml/demo/Communities/: qmldir
libs/Communities/src/Communities/: CommunitiesPlugin.cpp
libs/Wallet/: CMakeLists.txt
libs/Wallet/libs/: CMakeLists.txt
libs/Wallet/libs/Transactions/: CMakeLists.txt
libs/Wallet/libs/Transactions/qml/: CMakeLists.txt  Transactions-qml.qrc
libs/Wallet/libs/Transactions/qml/demo/Transactions/: qmldir
libs/Wallet/libs/Transactions/src/: CMakeLists.txt
libs/Wallet/libs/Transactions/src/Transactions/: CMakeLists.txt  Transaction.cpp  Transaction.h  TransactionsPlugin.cpp  TransactionsPlugin.h
libs/Wallet/qml/: CMakeLists.txt  Wallet-qml.qrc
libs/Wallet/qml/demo/Wallet/: WalletView.qml  qmldir
libs/Wallet/src/: CMakeLists.txt
libs/Wallet/src/Wallet/: CMakeLists.txt  WalletModule.h  WalletPlugin.cpp  WalletPlugin.h
